fix menu overflow

--- a/src/components/shared/flex-container.less
+++ b/src/components/shared/flex-container.less
@@ -12,6 +12,7 @@
 	top: 0px;
 	bottom: 0px;
 	padding: 0 15 0 15;
+	overflow: scroll;
 }
 
 @media @desktop {
